package NYT.NJobProberClient.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqGenerateInputContext
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspGenerateInputContext
{
    repeated NYT.NProto.TGuid chunk_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
